mouse: Try harder to re-enable devices

Look for disabled devices when we need to re-enable
devices as they won't be listed in the list of devices
given by GdkDeviceManager (as per bug 658379)

https://bugzilla.gnome.org/show_bug.cgi?id=656397